// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LongTermDebtReport displays when long term debt has decreased 1`] = `
<div
  className="longTermDebt__report"
>
  Your long term debt total
  <p
    className="longTermDebt__currentDebt"
  >
    £
    800
  </p>
  <p
    className="longTermDebt__creditLimit"
  >
    Total credit limit £
    0
     
  </p>
  <p
    className="longTermDebt__debtChange"
  >
    Down £100 from last month
     
  </p>
</div>
`;

exports[`LongTermDebtReport displays when long term debt has increased 1`] = `
<div
  className="longTermDebt__report"
>
  Your long term debt total
  <p
    className="longTermDebt__currentDebt"
  >
    £
    800
  </p>
  <p
    className="longTermDebt__creditLimit"
  >
    Total credit limit £
    0
     
  </p>
  <p
    className="longTermDebt__debtChange"
  >
    Up £100 from last month
     
  </p>
</div>
`;

exports[`LongTermDebtReport renders 1`] = `
<div
  className="longTermDebt__report"
>
  Your long term debt total
  <p
    className="longTermDebt__currentDebt"
  >
    £
    800
  </p>
  <p
    className="longTermDebt__creditLimit"
  >
    Total credit limit £
    0
     
  </p>
  <p
    className="longTermDebt__debtChange"
  >
    Down £100 from last month
     
  </p>
</div>
`;
